--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "scrollreveal": "^4.0.9",
     "styled-components": "^6.1.6"
   },
   "devDependencies": {
