--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
+    "redux-persist": "^6.0.0",
     "scrollreveal": "^4.0.9",
     "styled-components": "^6.1.6",
     "yup": "^1.3.3"
